--- a/index.html
+++ b/index.html
@@ -123,8 +123,6 @@
         <script type="text/javascript" src="js/scripts.js"></script>
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-        
-        
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="scripts.js"></script>
         <script type="text/javascript" src="./js/scripts.js"></script>
@@ -145,7 +143,6 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/css/main-style.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/css/nav.css"> 
 	    <link rel="stylesheet" type="text/css" href="./CSS/base.css">
-	
 	    <link rel="stylesheet" type="text/css" href="./CSS/bullets.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/churches-style2.css"> 
 	    <link rel="stylesheet" type="text/css" href="./CSS/collage-ie.css">
@@ -171,7 +168,6 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/fourside-drop10px.css"> 
 	    <link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px-fullpage.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/fourside-drop30px.css">
-	 
 	    <link rel="stylesheet" type="text/css" href="./CSS/grad-pic-html5.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/grad-pic-text-HTML5.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/gradient-pic.css">
@@ -220,7 +216,7 @@
 	    <link rel="stylesheet" type="text/css" href="./CSS/three-col-no-tables.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/three-colstyle.css"> --
 	    <link rel="stylesheet" type="text/css" href="./CSS/transparent.css">
-	    <!-- <link rel="stylesheet" type="text/css" href="./CSS/turquoise.css">
+	    <link rel="stylesheet" type="text/css" href="./CSS/turquoise.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/two-shadow.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/two-shadowfig10.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/two-shadowtext.css">
