--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -4,8 +4,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- meta details go here -->
     <title>Test page for semantic tags </title>
-	<script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src=".lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./lib/jquery.mobile-1.0.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="./js/scripts.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
