--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -7,6 +7,10 @@
 	<script src=".lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="./lib/jquery.mobile-1.0.min.js" type="text/javascript" charset="utf-8"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/-1.7.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery-ui-1.8.17.custom.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery.mobile-1.0.min.js"></script>
     <script type="text/javascript" src="./js/scripts.js"></script>
     <script type="text/javascript" src="scripts.js"></script>
     <meta charset="UTF-8">
