--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- meta details go here -->
     <title>Test page for semantic tags </title>
-	<script src=".lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="./lib/jquery.mobile-1.0.min.js" type="text/javascript" charset="utf-8"></script>
     
